fixing dark mode things

--- a/style.css
+++ b/style.css
@@ -218,6 +218,18 @@ form {
     border-radius: 5px;
     background-color: #f9f9f9;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    color: black;
+}
+
+form.dark-mode {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #2d2d2d;
+    border-radius: 5px;
+    background-color: #131313;
+    box-shadow: 0 4px 6px rgba(247, 247, 247, 0.1);
+    color: white;
 }
 
 form label {
